syntax = "proto3";

package tattooapp.v1;

option go_package = "github.com/kbremont/tattoo-app/api/proto/gen/go/tattooapp/v1;pb";

// Common message types
message UserCredentials {
  string email = 1;
  string password = 2;
}

message UserId {
  string user_id = 1;
}

message AuthToken {
  string access_token = 1;
  string refresh_token = 2;
  string expires_at = 3; // Optional: ISO8601 timestamp or Unix epoch as string
}