syntax = "proto3";

package tattooapp.v1;

import "tattooapp/v1/user.proto";

option go_package = "github.com/kbremont/tattoo-app/api/proto/gen/go/tattooapp/v1;pb";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// information required to create a new user
message CreateUserRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
}

// information returned after creating a new user
message CreateUserResponse {
    int32 user_id = 1;
}

// information required to get a user
message GetUserRequest {
    int32 user_id = 1;
}

// information returned after getting a user
message GetUserResponse {
    User user = 1;
}

// information required to update a user
message UpdateUserRequest {
    int32 user_id = 1;
    string email = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
}

// information returned after updating a user
message UpdateUserResponse {
    User user = 1;
}

// information required to delete a user
message DeleteUserRequest {
    int32 user_id = 1;
}

// information returned after deleting a user
message DeleteUserResponse {}